# dyknow

./: .gitignore  DESIGN.md  DISTRIBUTION.md  LICENSE  README.md  SKILL.md  dyknow.bat  pyproject.toml  requirements.txt
dyknow/: __init__.py  __main__.py  config.py  db.py  downloader.py  generator.py  install_scheduled_task.ps1  login.py  main.py  night_runner.bat  night_runner.sh  night_transcribe.py  parser.py  scraper.py  syncer.py  transcriber.py
scripts/: check_env.py  gen_index.py  organize_notes.py
tests/: test_dyknow.py
