[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dyknow"
version = "0.1.0"
description = "抖音视频 → 本地知识库 Markdown 笔记。自动下载视频、语音转录文字、生成 Obsidian 兼容笔记。"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "天空之城" },
]
keywords = ["douyin", "tiktok", "knowledge-base", "obsidian", "whisper", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "playwright>=1.40.0",
    "pywhispercpp>=1.5.0",
    "av>=10.0.0",
]

[project.scripts]
dyknow = "dyknow.main:main"

[project.urls]
Homepage = "https://github.com/stank2386322761/dyknow"
Issues = "https://github.com/stank2386322761/dyknow/issues"

[tool.setuptools]
packages = ["dyknow"]
